laba2/src/main/java/fotius/example/musicapp/domain/error/EntityNotFoundException.java
package fotius.example.musicapp.domain.error;

public class EntityNotFoundException extends MusicAppException {
    public EntityNotFoundException(String message) {
        super(message);
    }
}
